# 3D-FEM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FindMetis.cmake  cli11.cmake
src/: Timer.h  domain_partitioning.cpp  domain_partitioning.h  main.cpp  readTetMesh.cpp  readTetMesh.h
