cmake_minimum_required(VERSION 3.16)
list(PREPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

project(3d_fem)

set(CMAKE_CXX_STANDARD 17)

# Libigl
include(libigl)

# Enable the target igl::glfw
# igl_include(glfw)
# Other modules you could enable
igl_include(embree)
#igl_include(imgui)
# igl_include(opengl)
igl_include(stb)
#igl_include(predicates)
#igl_include(xml)
#igl_include(copyleft cgal)
#igl_include(copyleft comiso)
#igl_include(copyleft core)
#igl_include(copyleft cork)
#igl_include(copyleft tetgen)
#igl_include(restricted matlab)
#igl_include(restricted mosek)
#igl_include(restricted triangle)

# Add your project files
file(GLOB SRC_FILES src/*.cpp src/*.h)
add_executable(${PROJECT_NAME} ${SRC_FILES})

# Link igl (and the glfw module) to your project
target_link_libraries(${PROJECT_NAME} PUBLIC 
  # igl::glfw
  ## Other modules you could link to
   igl::embree
  # igl::imgui
  # igl::opengl
  igl::stb
  # igl::predicates
  # igl::xml
  # igl_copyleft::cgal
  # igl_copyleft::comiso
  # igl_copyleft::core
  # igl_copyleft::cork
  # igl_copyleft::tetgen
  # igl_restricted::matlab
  # igl_restricted::mosek
  # igl_restricted::triangle

  )

find_package(Metis REQUIRED)
target_link_libraries(${PROJECT_NAME} PUBLIC Metis::Metis)

find_package(OpenMP COMPONENTS CXX REQUIRED)
target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)

include(cli11)
target_link_libraries(${PROJECT_NAME} PUBLIC CLI11::CLI11)

add_compile_options(-O3)